# heal2

./: bechmarks.txt  bench.html  bench.txt  heal-exe.aux  heal-exe.hp  heal-exe.prof  heal.cabal  mono_ga.ps  mono_no_cross.ps  mono_no_mut.ps  notes.txt  test.html  test.txt
Benchmarks/: .bench.hs.swn  .bench.hs.swo  .bench.hs.swp  bench.hs
Tests/: .tests.hs.swn  .tests.hs.swo  .tests.hs.swp  tests.hs
examples/: heal-examples.cabal  stack.yaml
examples/.stack-work/install/x86_64-linux/lts-7.10/8.0.1/flag-cache/: heal-0.1.0.0-8DmO5TSaBHw6F0Y2IHXjyp
examples/.stack-work/install/x86_64-linux/lts-7.10/8.0.1/lib/x86_64-linux-ghc-8.0.1/heal-0.1.0.0-8DmO5TSaBHw6F0Y2IHXjyp/Heal/: Polymorphic.dyn_hi  Polymorphic.hi
examples/src/: polymorphic-ga.hs
profiling/: heal-exe.aux  heal-exe.hp  heal-exe.prof  heal-exe.ps  mono.ps  mut.aux  mut.hp  mut.prof  mut.ps  poly.aux  poly.hp  poly.prof  poly.ps
src/: .Main.hs.swm  .Main.hs.swn  .Main.hs.swo  .Main.hs.swp  .session.vim  Main.hs
src/Heal/: .Bits.hs.swo  .Bits.hs.swp  .Monomorphic.hs.swl  .Monomorphic.hs.swm  .Monomorphic.hs.swn  .Monomorphic.hs.swo  .Monomorphic.hs.swp  .Mutable.hs.swk  .Mutable.hs.swl  .Mutable.hs.swm  .Mutable.hs.swn  .Mutable.hs.swo  .Mutable.hs.swp  .Pipes.hs.swm  .Pipes.hs.swn  .Pipes.hs.swo  .Pipes.hs.swp  .Polymorphic.hs.swl  .Polymorphic.hs.swm  .Polymorphic.hs.swn  .Polymorphic.hs.swo  .Polymorphic.hs.swp  .Scope.hs.swm  .Scope.hs.swn  .Scope.hs.swo  .Scope.hs.swp  .Utilities.hs.swn  .Utilities.hs.swo  .Utilities.hs.swp  .session.vim  Bits.hs  Monomorphic.hs  Mutable.hs  Pipes.hs  Polymorphic.hs  Scope.hs  Utilities.hs
