name:                heal
version:             0.1.0.0
synopsis:            Genetic and Evolutionary Algorithms in Haskell with functional programming idioms
description:         Please see README.md
homepage:            https://github.com/nsmryan/heal#readme
license:             BSD3
license-file:        LICENSE
author:              Noah Ryan
maintainer:          nsmryan@gmail.com
copyright:           2016 Noah Ryan
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.10

Executable heal-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       heal,
                       mwc-random-monad,
                       lens,
                       containers,
                       dlist,
                       these,
                       optparse-applicative,
                       witherable,
                       vector,
                       transformers,
                       primitive,
                       mwc-random,
                       monad-primitive,
                       optparse-applicative >= 0.12 && < 0.14
  GHC-Options:         -O2 -Wall -rtsopts -fno-warn-unused-do-bind 

Library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pipes,
                       mtl,
                       transformers,
                       primitive,
                       mwc-random-monad,
                       mwc-random,
                       these,
                       monad-primitive,
                       witherable,
                       vector,
                       containers,
                       dlist,
                       primitive,
                       lens
  Exposed-Modules:     Heal.Polymorphic
                       Heal.Pipes
                       Heal.Monomorphic
                       Heal.Mutable
                       Heal.Scope
                       Heal.Utilities
                       Heal.Bits

Benchmark heal-bench
    Default-Language: Haskell2010
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   Benchmarks
    Main-Is:          bench.hs
    GHC-Options:     -O2 -Wall -rtsopts -fno-warn-unused-do-bind 

    Build-Depends:
        base      >= 4.4     && < 5  ,
        heal,
        criterion >= 1.1.1.0 && < 1.2,
        optparse-applicative >= 0.12 && < 0.14,
        mtl       >= 2.1     && < 2.3,
        containers,
        vector,
        mwc-random-monad,
        mwc-random,
        pipes,
        mwc-random-monad,
        mwc-random,
        transformers,
        primitive,
        these

test-suite heal-tests
    Default-Language: Haskell2010
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   Tests
    Main-Is:          tests.hs
    GHC-Options:      -Wall -rtsopts -fno-warn-missing-signatures -fno-enable-rewrite-rules

    Build-Depends:
        base >= 4.4 && < 5,
        heal,
        tasty,
        tasty-quickcheck,
        weigh,
        tasty-hunit,
        vector,
        containers,
        split,
        QuickCheck,
        mwc-random-monad,
        mwc-random,
        these

        
